[package]
name = "void_destiny"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0
debug = 2 

[profile.dev.package."*"]
opt-level = 3

[dependencies]
# https://github.com/merwaaan/bevy_spritesheet_animation
bevy = "0.16.0"
benimator = "4.1.3"
bevy_ecs_tilemap = { version = "0.16.0" }
rand = "0.9.1"
bevy-inspector-egui = "0.31.0"
noise = "0.9.0"