[package]
name = "void_destiny"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0
debug = 2 

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.17.3", features = ["bevy_dev_tools"]}
bevy_ecs_tilemap = { version = "0.17.0" }
rand = "0.9.1"
bevy-inspector-egui = "0.35.0"
egui = "0.33.3"
noise = "0.9.0"
bevy_spritesheet_animation = "4.0.0"
bevy_ecs_tiled = "0.10"
# Check leafwing input manager for input handling

[package.metadata.scripts]
run = "cargo run"
build = "cargo build --debug"