[package]
name = "void_destiny"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.17.3", features = ["bevy_dev_tools"]}
bevy_ecs_tilemap = { version = "0.17.0" }
rand = "0.9.1"
bevy-inspector-egui = "0.35.0"
egui = "0.33.3"
noise = "0.9.0"
bevy_spritesheet_animation = "4.0.0"
bevy_ecs_tiled = "0.10"
# Check leafwing input manager for input handling

[package.metadata.scripts]
run = "cargo run"
build = "cargo build --debug"

[lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments, which would undesirably trigger this lint.
too_many_arguments = "allow"
# Queries may access many components, which would undesirably trigger this lint.
type_complexity = "allow"
# Make sure macros use their standard braces, such as `[]` for `bevy_ecs::children!`.
nonstandard_macro_braces = "warn"

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 0
debug = 2 

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
[profile.dev.package.wgpu-types]
debug-assertions = false

# Override some settings for native builds.
[profile.release-native]
# Default to release profile values.
inherits = "release"
# Optimize with performance in mind.
opt-level = 3
# Keep debug information in the binary.
strip = "none"